--- a/index.html
+++ b/index.html
@@ -4,12 +4,103 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portforio site">
+    <meta name="keyword" content="bolt, bootstrap, portforio">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/lib/all.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header class="header">
+      <div class="inner header-inner">
+        <i class="fas fa-bolt"></i>
+        <a href="#">Contact</a>
+      </div>
+    </header>
 
+    <main>
+      <div class="title">
+        <div class="inner title-inner">
+          <h1>Bolt Theme</h1>
+          <p>FREE BOOTSTRAP THEMES</p>
+        </div>
+      </div>
+
+      <section class="content">
+        <div class="inner content-inner">
+          <figure><img src="img/iphone.png" alt="iphone"></figure>
+          <div class="content__text">
+            <h1 class="page-title">WHAT WE CAN DO?</h1>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <article class="works">
+        <div class="inner works-inner">
+          <h1 class="page-title">OUR LATEST WORK</h1>
+          <figure class="works__img">
+            <img src="img/01.jpg" alt="">
+            <img src="img/02.jpg" alt="">
+            <img src="img/03.jpg" alt="">
+            <img src="img/04.jpg" alt="">
+            <img src="img/05.jpg" alt="">
+            <img src="img/06.jpg" alt="">
+          </figure>
+          <div class="works__text">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            <a href="#">Email Me!</a>
+          </div>
+        </div>
+      </article>
+
+
+      <section class="skills">
+        <div class="inner">
+          <h1 class="page-title">OUR SKILLS</h1>
+          <div class="skills__content">
+            <div class="skills__parts">
+              <img src="img/circle_01.png" alt="">
+              <h1>JavaScript</h1>
+            </div>
+
+            <div class="skills__parts">
+              <img src="img/circle_02.png" alt="">
+              <h1>Bootstrap</h1>
+            </div>
+
+            <div class="skills__parts">
+              <img src="img/circle_03.png" alt="">
+              <h1>WordPress</h1>
+            </div>
+
+            <div class="skills__parts">
+              <img src="img/circle_04.png" alt="">
+              <h1>Photoshop</h1>
+            </div>
+          </div>
+        </div>
+        </section>
+
+      <nav class="sns">
+        <div class="inner sns-inner">
+          <a href=#><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fas fa-globe"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"></a><i class="fas fa-envelope"></i></a>
+        </div>
+      </nav>
+    </main>
+
+    <footer class="footer">
+      <div class="inner footer-inner">
+        <p>Crafted with 🤍 by BlackTie.co</p>
+      </div>
+    </footer>
   </body>
 </html>
