--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
       <section class="content">
         <div class="inner content-inner">
-          <figure><img src="img/iphone.png" alt="iphone"></figure>
+          <figure class="content__img">
+            <img src="img/iphone.png" alt="iphone">
+          </figure>
           <div class="content__text">
             <h1 class="page-title">WHAT WE CAN DO?</h1>
             <p>
@@ -90,7 +92,7 @@
       <nav class="sns">
         <div class="inner sns-inner">
           <a href=#><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fas fa-globe"></i></a>
+          <a href="#"><i class="fas fa-basketball-ball"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"></a><i class="fas fa-envelope"></i></a>
         </div>
