Bolt -PC-を修正しました。

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <div class="title">
         <div class="inner title-inner">
           <h1>Bolt Theme</h1>
@@ -31,11 +31,11 @@
 
       <section class="content">
         <div class="inner content-inner">
-          <figure class="content__img">
+          <div class="content__img">
             <img src="img/iphone.png" alt="iphone">
-          </figure>
+          </div>
           <div class="content__text">
-            <h1 class="page-title">WHAT WE CAN DO?</h1>
+            <h2 class="page-title">WHAT WE CAN DO?</h2>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
@@ -45,15 +45,39 @@
 
       <article class="works">
         <div class="inner works-inner">
-          <h1 class="page-title">OUR LATEST WORK</h1>
-          <figure class="works__img">
-            <img src="img/01.jpg" alt="">
-            <img src="img/02.jpg" alt="">
-            <img src="img/03.jpg" alt="">
-            <img src="img/04.jpg" alt="">
-            <img src="img/05.jpg" alt="">
-            <img src="img/06.jpg" alt="">
-          </figure>
+          <h2 class="page-title">OUR LATEST WORK</h2>
+          <ul class="works__img">
+            <li>
+              <a href="#">
+                <img src="img/01.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/02.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/03.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/04.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/05.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="img/06.jpg" alt="">
+              </a>
+            </li>
+          </ul>
           <div class="works__text">
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
             <a href="#">Email Me!</a>
@@ -63,39 +87,55 @@
 
 
       <section class="skills">
-        <div class="inner">
-          <h1 class="page-title">OUR SKILLS</h1>
+        <div class="inner skills-inner">
+          <h2 class="page-title">OUR SKILLS</h2>
           <div class="skills__content">
-            <div class="skills__parts">
+            <figure class="skills__parts">
               <img src="img/circle_01.png" alt="">
-              <h1>JavaScript</h1>
-            </div>
+              <figcaption>JavaScript</figcaption>
+            </figure>
 
-            <div class="skills__parts">
+            <figure class="skills__parts">
               <img src="img/circle_02.png" alt="">
-              <h1>Bootstrap</h1>
-            </div>
+              <figcaption>Bootstrap</figcaption>
+            </figure>
 
-            <div class="skills__parts">
+            <figure class="skills__parts">
               <img src="img/circle_03.png" alt="">
-              <h1>WordPress</h1>
-            </div>
+              <figcaption>WordPress</figcaption>
+            </figure>
 
-            <div class="skills__parts">
+            <figure class="skills__parts">
               <img src="img/circle_04.png" alt="">
-              <h1>Photoshop</h1>
-            </div>
+              <figcaption>Photoshop</figcaption>
+            </figure>
           </div>
         </div>
         </section>
 
       <nav class="sns">
-        <div class="inner sns-inner">
-          <a href=#><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fas fa-basketball-ball"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"></a><i class="fas fa-envelope"></i></a>
-        </div>
+        <ul class="inner sns-inner">
+          <li>
+            <a href=#>
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-dribbble"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
       </nav>
     </main>
 
