「Bolt」レスポンシブ対応完成

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <header class="header">
       <div class="inner header-inner">
         <i class="fas fa-bolt"></i>
-        <a href="#">Contact</a>
+        <a class="hamburger header__icon" href="#">
+          <div class="hamburger__parts"></div>
+          <div class="hamburger__parts"></div>
+          <div class="hamburger__parts"></div>
+        <a class="button header__icon" href="#">Contact</a>
       </div>
     </header>
 
@@ -47,33 +51,33 @@
         <div class="inner works-inner">
           <h2 class="page-title">OUR LATEST WORK</h2>
           <ul class="works__img">
-            <li>
-              <a href="#">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/01.jpg" alt="">
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/02.jpg" alt="">
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/03.jpg" alt="">
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/04.jpg" alt="">
               </a>
             </li>
-            <li>
-              <a href="#">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/05.jpg" alt="">
               </a>
             </li>
-            <li>
-              <a href="">
+            <li class="link">
+              <a class="link__parts" href="#">
                 <img src="img/06.jpg" alt="">
               </a>
             </li>
@@ -123,23 +127,23 @@
         
         <nav class="sns">
           <ul class="inner sns-inner">
-          <li>
-            <a href=#>
+          <li class="link">
+            <a class="link__parts" href="#">
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="link">
+            <a class="link__parts" href="#">
               <i class="fab fa-dribbble"></i>
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="link">
+            <a class="link__parts" href="#">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
-          <li>
-            <a href="#">
+          <li class="link">
+            <a class="link__parts" href="#">
               <i class="fas fa-envelope"></i>
             </a>
           </li>
