Bolt -responsive-の修正

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <header class="header">
       <div class="inner header-inner">
         <i class="fas fa-bolt"></i>
-        <a class="hamburger header__icon" href="#">
-          <div class="hamburger__parts"></div>
-          <div class="hamburger__parts"></div>
-          <div class="hamburger__parts"></div>
+        <div class="hamburger header__icon">
+          <span class="hamburger__parts"></span>
+          <span class="hamburger__parts"></span>
+          <span class="hamburger__parts"></span>
+        </div>
         <a class="button header__icon" href="#">Contact</a>
       </div>
     </header>
@@ -89,7 +90,6 @@
           </div>
         </div>
       </article>
-
 
       <section class="skills">
         <div class="inner skills-inner">
